--- a/package.json
+++ b/package.json
@@ -47,7 +47,19 @@
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "ethereum-ens": "^0.7.4",
+    "ipfs-api": "^26.1.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-auth-wrapper": "^1.0.0",
+    "redux-thunk": "^2.2.0",
+    "uport-connect": "^0.7.3",
+    "web3": "^1.0.0-beta.37"
   },
   "dependencies": {
     "ethereum-ens": "^0.7.4",
